--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "@rollup/plugin-html": "1.0.3",
     "@types/typeahead": "0.11.32",
     "ajv": "8.17.1",
-    "autoprefixer": "10.4.19",
+    "autoprefixer": "^10.4.19",
     "axios": "1.7.2",
     "babel-loader": "9.1.3",
     "browser-sync": "^1.3.7",
     "cross-env": "7.0.3",
     "glob": "10.4.5",
     "lodash": "4.17.21",
-    "postcss": "8.4.40",
+    "postcss": "^8.4.40",
     "prettier": "3.2.2",
     "resolve-url-loader": "5.0.0",
     "sass": "1.76.0",
     "sass-loader": "14.0.0",
+    "tailwindcss": "^4.0.9",
     "vite": "^5.4.14"
   },
   "overrides": {
@@ -79,6 +80,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.8",
+    "@tailwindcss/vite": "^4.0.9",
     "apexcharts-clevision": "3.28.5",
     "bootstrap": "5.3.3",
     "boxicons": "2.1.4",
