--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@rollup/plugin-html": "1.0.3",
     "@types/typeahead": "0.11.32",
     "ajv": "8.17.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "axios": "1.7.2",
     "babel-loader": "9.1.3",
     "browser-sync": "^1.3.7",
     "cross-env": "7.0.3",
     "glob": "10.4.5",
+    "laravel-vite-plugin": "^1.2.0",
     "lodash": "4.17.21",
-    "postcss": "^8.4.40",
+    "postcss": "^8.5.3",
     "prettier": "3.2.2",
     "resolve-url-loader": "5.0.0",
     "sass": "1.76.0",
@@ -86,7 +87,6 @@
     "boxicons": "2.1.4",
     "highlight.js": "11.9.0",
     "jquery": "3.7.1",
-    "laravel-vite-plugin": "1.0.1",
     "masonry-layout": "4.2.2",
     "perfect-scrollbar": "1.5.5"
   }
